# vrpn-release

./: 0001-also-install-cmake-config.patch  0002-set-options-with-cache.patch  0003-remove-cmake-sets.patch  0004-Revert-remove-cmake-sets.patch  0005-set-python3-python2-build-to-false.patch  0006-deprecate-CMAKE_HAVE_THREADS_LIBRARY.patch  CMakeLists.txt  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
rpm/: ros-rolling-vrpn.spec  template.spec
